  dre, patch provided by djGrrr.
- Fixed SAPART causing a flood of notices from all servers, fun. Reported and patch
  provided by djGrrr.
- Changed password length from 32 to 48, is allocated dynamically anyway.
- Fixed file descriptor leakage on rehash. This resulted in [number of modules loaded]
  file descriptors being leaked upon every /REHASH.
  So if you, for example, had 3 modules loaded and rehashed 30 times, it would cause
  the ircd to consume 90 useless file descriptors (which often means 90 less file
  descriptors being available to clients).
- Fixed #0003171 reported by danieldg (typo) doc/technical
- #0003146 reported by vonitsanet, regarding Modes O,S (etc) not rejected for modes-on-connect
  fixed by djGrrr
- #0002932 reported by therock247uk, patched by WolfSage, regarding Local
  opers can /chghost /chgident /chgname on someone thats on another server on
  the network.
- #0003212 patched by Grunt, regarding /userip <someone_else> seemingly
  shows your own (cloaked) IP.
- #0002846 reported by alex323, patched by WolfSage, regarding local ircop cannot issue CLOSE command
- #3272 patched by w00t, regarding remove restrictions on NOTICE/PRIVMSG $* for opers.
- Fixed SVSKILL sending an illegal (wrong direction) QUIT right after, #0003307
- xx reported and fixed by WolfSage (addmotd, addomotd in help.conf)
- #0003159 reported by aegis and Bock, regarding typos in documentation
- #0002560 reported and patched by w00t, regarding a typo in /SAMODE
- #0002844 reported by RandomNumber: make spamfilter actions case insensitive
- help.conf updates... #0002420 reported by KnuX fixed by WolfSage
- #0003264 reported by Robby22 regarding help.conf typo
- Updated c-ares to version 1.4.0
- Updated tre to version 0.7.5
- help.conf updates. Missing some ;'s.
- #0003027 reported by Trocotronic, regarding doing -l <para> on SJOIN,
  and not -l as supposed. This may have caused desyncs