@@ -1030,10 +1030,9 @@ int  m_module(aClient *cptr, aClient *sptr, int parc, char *parv[])
 #endif
 
 	/* Opers can do /module <servername> */
-	if ((parc > 1) && (IsServer(cptr) || IsOper(sptr)) &&
-	    (hunt_server_token(cptr, sptr, MSG_MODULE, TOK_MODULE, ":%s", 1, parc, parv) != HUNTED_ISME))
-		return 0;
-	
+        if ((parc > 1) && (hunt_server_token(cptr, sptr, MSG_MODULE, TOK_MODULE, ":%s", 1, parc,
+             parv) != HUNTED_ISME))
+		return 0;	
 	if (!Modules)
 	{
 		sendto_one(sptr, ":%s NOTICE %s :*** No modules loaded", me.name, sptr->name);
